k8s/dev/demo-api-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-demo-api-svc
  namespace: api
spec:
  selector:
    app: java-demo-api
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demo-api-deploy
  namespace: api    
  labels:
    app: java-demo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-demo-api
  template:
    metadata:
      labels:
        app: java-demo-api     
    spec:
      containers:
        - name: java-demo-api
          image: java-demo-api
          ports:
          - name: http
            containerPort: 8080
