k8s/dev/domo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "local.demo.127.0.0.1.sslip.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: java-demo-api-svc
              port:
                number: 8080
